fix: fix dropdown z-index bug

--- a/src/components/header/headerStyle.scss
+++ b/src/components/header/headerStyle.scss
@@ -26,7 +26,6 @@
   }
 
   &__nav {
-    z-index: +1;
     display: flex;
     position: absolute;
     top: 4rem;
